# django-matt

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  todos.md
.cursor/: config.json  prompts.md  tasks.md
.cursor/templates/: django_model.py
django_matt/: __init__.py  middleware.py
django_matt/config/: __init__.py  utils.py
django_matt/config/base/: __init__.py
django_matt/config/components/: __init__.py  cache.py  database.py  performance.py  security.py
django_matt/config/environments/: __init__.py  development.py  production.py  staging.py
django_matt/core/: controller.py  errors.py  router.py  schema.py
django_matt/db/: __init__.py
django_matt/db/postgres/: __init__.py  vector.py
django_matt/dev/: __init__.py  hot_reload.py
django_matt/tests/: test_settings.py
django_matt/utils/: __init__.py  errors.py  hot_reload.py  performance.py
docs/: architecture.md  authentication.md  cli_tools.md  configuration.md  configuration_system.md  crud-generator.md  data-fetching.md  database.md  dx-tools.md  error_handling.md  front-end.md  machine-learning.md  mixins.md  models.md  performance.md  schemas.md  startapp.md  templates.md  type-sync.md
examples/: README.md  advanced_performance_demo.py  error_handling_demo.py  hot_reload_demo.py  performance_demo.py  settings_example.py
examples/todo_app/: README.md  __init__.py  controllers.py  models.py  schemas.py  urls.py
scripts/: generate_types.py
test_projects/: .env.example  .env.staging  settings.py
test_projects/api/: apps.py  urls.py
test_projects/config/: __init__.py
test_projects/test_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  settings.py  test_performance.py  urls.py
(+11 files in other folders)
